Fix: background of supernova contextline on hover is too light

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -7658,7 +7658,7 @@
       > .tab-stack
       > .tab-background
       > .tab-context-line::before {
-      background-color: rgba(0, 0, 0, 0.2) !important;
+      background-color: rgba(0, 0, 0, 0.4) !important;
       opacity: 1 !important;
     }
     #TabsToolbar[brighttext]
@@ -7666,7 +7666,7 @@
       > .tab-stack
       > .tab-background
       > .tab-context-line::before {
-      background-color: rgba(255, 255, 255, 0.2) !important;
+      background-color: rgba(255, 255, 255, 0.4) !important;
     }
     /* Animation */
     @media (prefers-reduced-motion: no-preference) {
@@ -22505,7 +22505,7 @@
     > .tab-stack
     > .tab-background
     > .tab-context-line::before {
-    background-color: rgba(0, 0, 0, 0.2) !important;
+    background-color: rgba(0, 0, 0, 0.4) !important;
     opacity: 1 !important;
   }
   #TabsToolbar[brighttext]
@@ -22513,7 +22513,7 @@
     > .tab-stack
     > .tab-background
     > .tab-context-line::before {
-    background-color: rgba(255, 255, 255, 0.2) !important;
+    background-color: rgba(255, 255, 255, 0.4) !important;
   }
   /* Animation */
   /* Animation for hover effect */
