--- a/css/leptonChromeESR.css
+++ b/css/leptonChromeESR.css
@@ -8100,7 +8100,7 @@
       > .tab-stack
       > .tab-background
       > .tab-context-line::before {
-      background-color: rgba(0, 0, 0, 0.2) !important;
+      background-color: rgba(0, 0, 0, 0.4) !important;
       opacity: 1 !important;
     }
     #TabsToolbar[brighttext]
@@ -8108,7 +8108,7 @@
       > .tab-stack
       > .tab-background
       > .tab-context-line::before {
-      background-color: rgba(255, 255, 255, 0.2) !important;
+      background-color: rgba(255, 255, 255, 0.4) !important;
     }
     /* Animation */
     @media (prefers-reduced-motion: no-preference) {
