--- a/src/tab/selected_tab/_supernova_like_contextline.scss
+++ b/src/tab/selected_tab/_supernova_like_contextline.scss
@@ -39,7 +39,7 @@ tabs tab.tabbrowser-tab[usercontextid] > .tab-stack > .tab-background > .tab-con
   > .tab-stack
   > .tab-background
   > .tab-context-line::before {
-  background-color: rgba(0, 0, 0, 0.2) !important;
+  background-color: rgba(0, 0, 0, 0.4) !important;
   opacity: 1 !important;
 }
 
@@ -48,7 +48,7 @@ tabs tab.tabbrowser-tab[usercontextid] > .tab-stack > .tab-background > .tab-con
   > .tab-stack
   > .tab-background
   > .tab-context-line::before {
-  background-color: rgba(255, 255, 255, 0.2) !important;
+  background-color: rgba(255, 255, 255, 0.4) !important;
 }
 
 
